--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -36,10 +36,14 @@ code = "redes-sociales"
                 $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
             }
             
-            if($this->page->settings["meta_title"]==null)
-            $this['metaTitle'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
-            else
-            $this['metaTitle'] = $this->page->settings["meta_title"];
+            if($this->page->settings["meta_title"]==null){
+                $this['metaTitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
+                $this['title'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
+            
+            } else {
+                $this['metaTitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
+                $this['title'] = 'Cádiz | '.$this->page->settings["meta_title"];
+            }
 
             if($this->page->settings["meta_description"]==null){
                 
@@ -79,7 +83,7 @@ code = "redes-sociales"
     <meta property="og:image" content="{{ metaImg }}">
     <meta property="og:title" content="{{ metaTitle }}">
     <meta property="og:description" content="{{ metaDescription }}">
-    <title>Cádiz te hace libre</title>
+    <title>{{title}}</title>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
