--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -7,7 +7,7 @@
 }
 
 /* HEADER EVENTOS */
-.header-event {
+.header-event, .header-empresa {
   padding: 0;
   box-sizing: border-box;
   z-index: 10;
