--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -45,6 +45,8 @@ code = "redes-sociales"
             }
 
             if($this->page->settings["meta_title"]==null){
+                echo 'test';
+                dd(1);
                 $this['metaTitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
                 $this['title'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
             
