--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2486,6 +2486,10 @@ html, body {
     mask-size: 200%;
     -webkit-mask-size: 200%; } }
 
+@media (max-width: 970px) {
+  .header-empresa {
+    height: auto !important; } }
+
 @media (max-width: 920px) and (min-width: 710px) {
   .separator-lang, .dis-item {
     display: none !important; }
