--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -370,6 +370,13 @@
       text-decoration: none;
       position: absolute;
       top: 70px; }
+    .event-features .feature-exp .link-exp {
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      flex-direction: column; }
   .event-features .feature-ruta {
     margin-right: 114px;
     display: -webkit-box;
