--- a/themes/default/layouts/defaultnc.htm
+++ b/themes/default/layouts/defaultnc.htm
@@ -43,10 +43,14 @@ code = "redes-sociales"
             }
             
             if($this->page->settings["meta_title"]==null){
+                echo 'test';
+                dd(1);
                 $this['metaTitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
                 $this['title'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
             
             } else {
+                echo 'test.1.2';
+                dd(1);
                 $this['metaTitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
                 $this['title'] = 'Cádiz | '.$this->page->settings["meta_title"];
             }
