--- a/themes/default/layouts/defaultnc.htm
+++ b/themes/default/layouts/defaultnc.htm
@@ -43,11 +43,11 @@ code = "redes-sociales"
             }
             
             if($this->page->settings["meta_title"]==null){
-                echo 'test';
-                dd(1);
+                
                 $this['metaTitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
                 $this['title'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
-            
+                echo 'test: '. $this['title'];
+                dd(1);
             } else {
                 echo 'test.1.2';
                 dd(1);
