--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -378,6 +378,14 @@
       position: absolute;
       top: 70px;
     }
+    .feature-txt-empresa {
+      color: rgba(255,255,255,0.5);
+      font-size: 13px;
+      line-height: 22px;
+      text-decoration: none;
+      position: absolute;
+      top: 90px;
+    }
     .link-exp {
       @include flexbox();
       flex-direction: column;
