--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -376,9 +376,7 @@
       color: rgba(255, 255, 255, 0.5);
       font-size: 13px;
       line-height: 22px;
-      text-decoration: none;
-      position: absolute;
-      top: 90px; }
+      text-decoration: none; }
     .event-features .feature-exp .link-exp {
       display: -webkit-box;
       display: -moz-box;
