--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4217,6 +4217,7 @@ ul.content.bussinesPage {
         font-size: 48px;
         color: #9B9B9B;
         line-height: 51px;
+
       }
       & > p {
         /* Andalusia Tour Trave Copy 3: */
@@ -4300,6 +4301,7 @@ ul.content.bussinesPage {
       color: #4A4A4A;
       line-height: 65px;
       margin-bottom: 54px;
+      text-transform: uppercase;
     }
     p{
       margin-top: 64px;
