--- a/themes/default/layouts/defaultnc.htm
+++ b/themes/default/layouts/defaultnc.htm
@@ -75,8 +75,7 @@ code = "redes-sociales"
             }
         }
 
-        echo 'test: '. $this['title'];
-        dd(2);
+        
     }
 
 ?>
@@ -106,7 +105,7 @@ code = "redes-sociales"
     <link rel="mask-icon" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/safari-pinned-tab.svg" color="#175DA3">
     <meta name="theme-color" content="#175DA3">
 </head>
-
+    -{{title}}- 
     {% partial 'site/header' %}
 
     {% component 'staticPage' %}
