--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3308,6 +3308,11 @@ html, body {
     line-height: 130px !important;
   }
 
+  section.desc h3 {
+    font-size: 44px !important;
+    line-height: 50px !important;
+  }
+
   #out-features {
     .feature-exp {
       &:first-child {
