--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2743,6 +2743,9 @@ html, body {
   .header-playa .txt {
     font-size: 130px !important;
     line-height: 130px !important; }
+  section.desc h3 {
+    font-size: 44px !important;
+    line-height: 50px !important; }
   #out-features .feature-exp:first-child {
     padding-top: 0px !important; }
   .header-experience .header-container {
