--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -801,6 +801,12 @@ html, body {
   background-attachment: fixed;
   background-size: cover; }
 
+.search-empresas {
+  background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%), url("../img/search-exp.jpg");
+  transform: rotate(0deg);
+  background-attachment: fixed;
+  background-size: cover; }
+
 #searchbar-events {
   background-image: url("../img/events-header.jpg"); }
 
