--- a/themes/default/layouts/prensa.htm
+++ b/themes/default/layouts/prensa.htm
@@ -46,12 +46,14 @@ code = "redes-sociales"
             }
             
             if($this->page->settings["meta_title"]==null){
+                
                 $this['metaTitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
-                $this['title'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
-            
+                $this['ptitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
+                
             } else {
+               
                 $this['metaTitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
-                $this['title'] = 'Cádiz | '.$this->page->settings["meta_title"];
+                $this['ptitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
             }
 
             if($this->page->settings["meta_description"]==null){
@@ -90,7 +92,7 @@ code = "redes-sociales"
     <meta property="og:image" content="{{ metaImg }}">
     <meta property="og:title" content="{{ metaTitle }}">
     <meta property="og:description" content="{{ metaDescription }}">
-    <title>{{title}}</title>
+    <title>{{ptitle}}</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-comarcas.css"/>
