--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -63,6 +63,10 @@
       font-family: Ryssa;
     }
 
+    .txt > #exp {
+      font-size: 200px;
+    }
+
     .txt-rutas {
       font-size: 121px;
       transform: rotate(-9deg);
