--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -119,7 +119,11 @@
     }
   }
 }
-
+  #search-empresas {
+    .brush {
+      margin-top: -86px;
+    }
+  }
 .header-general:before {
    z-index: 2;
    content: '';
