--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -39,12 +39,17 @@ code = "redes-sociales"
             if($this->page->settings["meta_title"]==null){
                 
                 $this['metaTitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
-                $this['ptitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
+                if($this['ptitle'] == ''){
+                     $this['ptitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
+                }
+               
                 
             } else {
-               
+                
                 $this['metaTitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
-                $this['ptitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
+                if($this['ptitle'] == ''){
+                    $this['ptitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
+                }
             }
 
             if($this->page->settings["meta_description"]==null){
