--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4118,7 +4118,7 @@ footer {
   }
   #search-event {
     width: 863px;
-    margin-bottom: 100px;
+    margin-bottom: 100px !important;
     .search-bar {
       width: 825px;
 
