--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3344,6 +3344,22 @@ footer {
     .bussinesPage #search-event .search-bar #empresa-category {
       width: 340px; }
 
+.bussinesPage .emp {
+  width: 100%;
+  max-width: 1300px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+  .bussinesPage .emp .empresas-container {
+    width: calc(100% / 3);
+    width: -webkit-calc(100% / 3);
+    width: -moz-calc(100% / 3);
+    width: -ms-calc(100% / 3); }
+
 ul.content.bussinesPage {
   list-style-type: none;
   text-align: center;
