--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4128,7 +4128,19 @@ footer {
 
     }
   }
-
+  .emp {
+    width: 100%;
+    max-width: 1300px;
+    @include flexbox();
+    flex-direction: row;
+    align-items: center;
+    .empresas-container {
+      width: calc(100% / 3);
+      width: -webkit-calc(100% / 3);
+      width: -moz-calc(100% / 3);
+      width: -ms-calc(100% / 3);
+    }
+  }
 }
 
 ul.content.bussinesPage {
