--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4129,15 +4129,7 @@ footer {
     }
   }
 }
-ul.content.bussinesPage {
-  list-style-type: none;
-  text-align: center;
-  padding: 0;
-  margin: auto;
-  margin-top: 14%;
-  margin-bottom: 60px;
-  display: table;
-  width: 100%;
+.emp {
   & > li {
     vertical-align: top;
     border-right: 1px solid #CECECE;
