--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3344,54 +3344,45 @@ footer {
     .bussinesPage #search-event .search-bar #empresa-category {
       width: 340px; }
 
-ul.content.bussinesPage {
-  list-style-type: none;
-  text-align: center;
-  padding: 0;
-  margin: auto;
-  margin-top: 14%;
-  margin-bottom: 60px;
-  display: table;
-  width: 100%; }
-  ul.content.bussinesPage > li {
-    vertical-align: top;
-    border-right: 1px solid #CECECE;
-    display: table-cell;
-    margin: 0em;
-    padding: 1em;
-    height: auto; }
-    ul.content.bussinesPage > li:last-child {
-      border-right: 0; }
-    ul.content.bussinesPage > li > img {
-      position: relative;
-      display: block;
-      top: -50px;
-      margin: auto;
-      margin-top: -7px; }
-    ul.content.bussinesPage > li ul {
-      list-style-type: none;
-      text-align: left;
-      padding: 0;
-      display: inline-block; }
-      ul.content.bussinesPage > li ul p {
-        font-family: AvenirNext-DemiBold;
-        font-size: 39px;
-        color: #4A4A4A;
-        line-height: 42px;
-        max-width: 237px;
-        text-align: center;
-        margin-bottom: 58px; }
-      ul.content.bussinesPage > li ul > li a {
-        font-family: AvenirNext-Medium;
-        font-size: 16px;
-        color: #9B9B9B;
-        line-height: 33px;
-        transition: all 0.3s; }
-        ul.content.bussinesPage > li ul > li a:hover {
-          opacity: 0.5;
-          text-decoration: none; }
-        ul.content.bussinesPage > li ul > li a img {
-          margin-left: 22px; }
+.emp > li {
+  vertical-align: top;
+  border-right: 1px solid #CECECE;
+  display: table-cell;
+  margin: 0em;
+  padding: 1em;
+  height: auto; }
+  .emp > li:last-child {
+    border-right: 0; }
+  .emp > li > img {
+    position: relative;
+    display: block;
+    top: -50px;
+    margin: auto;
+    margin-top: -7px; }
+  .emp > li ul {
+    list-style-type: none;
+    text-align: left;
+    padding: 0;
+    display: inline-block; }
+    .emp > li ul p {
+      font-family: AvenirNext-DemiBold;
+      font-size: 39px;
+      color: #4A4A4A;
+      line-height: 42px;
+      max-width: 237px;
+      text-align: center;
+      margin-bottom: 58px; }
+    .emp > li ul > li a {
+      font-family: AvenirNext-Medium;
+      font-size: 16px;
+      color: #9B9B9B;
+      line-height: 33px;
+      transition: all 0.3s; }
+      .emp > li ul > li a:hover {
+        opacity: 0.5;
+        text-decoration: none; }
+      .emp > li ul > li a img {
+        margin-left: 22px; }
 
 .emp {
   width: 100%;
