--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4129,7 +4129,7 @@ footer {
     }
   }
 }
-.emp {
+.emp .empresas-container {
   & > li {
     vertical-align: top;
     border-right: 1px solid #CECECE;
