--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4177,6 +4177,7 @@ footer {
   @include flexbox();
   flex-direction: row;
   align-items: center;
+  margin-top: 200px;
   .empresas-container {
     width: calc(100% / 3);
     width: -webkit-calc(100% / 3);
