--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3385,13 +3385,14 @@ footer {
   display: -webkit-flex;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center;
   margin-top: 200px; }
   .emp .empresas-container {
     width: calc(100% / 3);
     width: -webkit-calc(100% / 3);
     width: -moz-calc(100% / 3);
-    width: -ms-calc(100% / 3); }
+    width: -ms-calc(100% / 3);
+    height: auto; }
 
 #prtlEmpresasl.bussinesPage ul {
   padding: 0;
