--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3386,7 +3386,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 225px; }
+  margin: 225px auto 0px auto; }
   .emp .empresas-container {
     width: calc(100% / 3);
     width: -webkit-calc(100% / 3);
