--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4180,6 +4180,12 @@ footer {
     @include flexbox();
     flex-direction: column;
   }
+  .main-emp {
+    margin-bottom: 50px;
+  }
+  .empresas1, .empresas2 {
+    border-right: 1px solid #CECECE;
+  }
 }
 #prtlEmpresasl.bussinesPage {
   ul {
