--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3356,7 +3356,7 @@ footer {
     line-height: 42px;
     max-width: 237px;
     text-align: center;
-    margin-bottom: 58px; }
+    margin: 0px auto 58px auto; }
   .emp .empresas-container ul > li a {
     font-family: AvenirNext-Medium;
     font-size: 16px;
