--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4142,7 +4142,7 @@ footer {
         line-height: 42px;
         max-width: 237px;
         text-align: center;
-        margin-bottom: 58px;
+        margin: 0px auto 58px auto;
       }
       & > li {
         a {
