--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4145,6 +4145,7 @@ footer {
         margin: 0px auto 58px auto;
       }
       & > li {
+        padding-left: 120px;
         a {
           font-family: AvenirNext-Medium;
           font-size: 16px;
