--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3357,17 +3357,19 @@ footer {
     max-width: 237px;
     text-align: center;
     margin: 0px auto 58px auto; }
-  .emp .empresas-container ul > li a {
-    font-family: AvenirNext-Medium;
-    font-size: 16px;
-    color: #9B9B9B;
-    line-height: 33px;
-    transition: all 0.3s; }
-    .emp .empresas-container ul > li a:hover {
-      opacity: 0.5;
-      text-decoration: none; }
-    .emp .empresas-container ul > li a img {
-      margin-left: 22px; }
+  .emp .empresas-container ul > li {
+    padding-left: 120px; }
+    .emp .empresas-container ul > li a {
+      font-family: AvenirNext-Medium;
+      font-size: 16px;
+      color: #9B9B9B;
+      line-height: 33px;
+      transition: all 0.3s; }
+      .emp .empresas-container ul > li a:hover {
+        opacity: 0.5;
+        text-decoration: none; }
+      .emp .empresas-container ul > li a img {
+        margin-left: 22px; }
 
 .emp {
   width: 100%;
