--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -101,6 +101,9 @@
 #search-empresas .brush {
   margin-top: -86px; }
 
+#search-empresas .txt {
+  line-height: 145px; }
+
 .header-general:before {
   z-index: 2;
   content: '';
