--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -123,6 +123,9 @@
     .brush {
       margin-top: -86px;
     }
+    .txt {
+      line-height: 145px;
+    }
   }
 .header-general:before {
    z-index: 2;
