--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -127,8 +127,10 @@
 
   @media (max-width: 1160px) {
     #search-empresas {
-      .txt {
-        line-height: 136px;
+      #exp-header {
+        .txt {
+          line-height: 136px;
+        }
       }
       .brush {
         margin-top: -10px;
