--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2589,6 +2589,10 @@ html, body {
     font-size: 200px !important;
     line-height: 200px !important;
   }
+  #search-empresas .txt {
+    font-size: 180px !important;
+    line-height: 145px !important;
+  }
 }
 
 @media (max-width: 600px) {
