--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2589,7 +2589,7 @@ html, body {
     font-size: 200px !important;
     line-height: 200px !important;
   }
-  #search-empresas .txt {
+  #search-empresas #exp-header .txt {
     font-size: 180px !important;
     line-height: 145px !important;
   }
