--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4156,12 +4156,12 @@ footer {
           color: #9B9B9B;
           line-height: 33px;
           transition: all 0.3s;
-          &:hover {
+          &:hover, &:focus, &:active {
             opacity: 0.5;
             text-decoration: none;
           }
           img {
-            margin-left: 22px;
+            margin-left: 16px;
           }
         }
       }
