--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3368,11 +3368,11 @@ footer {
       color: #9B9B9B;
       line-height: 33px;
       transition: all 0.3s; }
-      .emp .empresas-container ul > li a:hover {
+      .emp .empresas-container ul > li a:hover, .emp .empresas-container ul > li a:focus, .emp .empresas-container ul > li a:active {
         opacity: 0.5;
         text-decoration: none; }
       .emp .empresas-container ul > li a img {
-        margin-left: 22px; }
+        margin-left: 16px; }
 
 .emp {
   width: 100%;
