--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2589,8 +2589,8 @@ html, body {
     font-size: 200px !important;
     line-height: 200px !important;
   }
-  #search-empresas #exp-header .txt {
-    font-size: 180px !important;
+  #search-empresas #exp-header .txt, .header-general .header-txt .txt > #exp {
+    font-size: 170px !important;
     line-height: 145px !important;
   }
 }
@@ -3595,6 +3595,11 @@ html, body {
   }
   .menu-list:last-child {
     margin-right: 0px !important;
+  }
+
+  /* Empresas */
+  .emp .empresas-container ul > li {
+    padding-left: 40px !important;
   }
 }
 
