--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3670,6 +3670,7 @@ html, body {
     flex-direction: column !important;
     .empresas-container {
       width: 100% !important;
+      margin-bottom: 60px;
     }
   }
 }
