--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3166,6 +3166,11 @@ html, body {
     line-height: 120px !important;
   }
 
+  #search-empresas .txt, .header-general .header-txt .txt > #exp {
+    font-size: 80px !important;
+    line-height: 80px !important;
+  }
+
   .header-txt {
     margin-top: 80px !important;
   }
