--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2643,6 +2643,8 @@ html, body {
   #search-empresas .txt, .header-general .header-txt .txt > #exp {
     font-size: 80px !important;
     line-height: 80px !important; }
+  .bussinesPage .whatDoYouNeedCadiz {
+    margin-bottom: 23px !important; }
   .header-txt {
     margin-top: 80px !important; }
   .more-content {
