--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3171,6 +3171,10 @@ html, body {
     line-height: 80px !important;
   }
 
+  .bussinesPage .whatDoYouNeedCadiz {
+    margin-bottom: 23px !important;
+  }
+
   .header-txt {
     margin-top: 80px !important;
   }
