--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3169,6 +3169,7 @@ html, body {
   #search-empresas .txt, .header-general .header-txt .txt > #exp {
     font-size: 80px !important;
     line-height: 80px !important;
+    margin-top: 50px;
   }
 
   .bussinesPage .whatDoYouNeedCadiz {
