--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -125,6 +125,12 @@
     }
   }
 
+  #listEmp {
+    #search-event {
+      margin-bottom: 0px !important;
+    }
+  }
+
   @media (max-width: 1160px) {
     #search-empresas {
       #exp-header {
