--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -101,6 +101,9 @@
 #search-empresas .brush {
   margin-top: -86px; }
 
+#listEmp #search-event {
+  margin-bottom: 0px !important; }
+
 @media (max-width: 1160px) {
   #search-empresas #exp-header .txt {
     line-height: 136px; }
